traefik/demo/nginx-http-demo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-80
  name: nginx-80
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-80
  template:
    metadata:
      labels:
        app: nginx-80
    spec:
      containers:
      - image: nginx:1.14.2
        imagePullPolicy: IfNotPresent
        name: nginx-80
        ports:
        - name: nginx-80
          containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-80
  namespace: default
spec:
  selector:
    app: nginx-80
  ports:
  - name: web
    port: 80
    targetPort: nginx-80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-80route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-v2.3
spec:
  entryPoints:
    - web # 跟ConfigMap中的保持一致
  routes:
  - match: Host(`nginx-80.k8stest.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: nginx-80
      port: 80
